// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the loading screen 1`] = `
Promise {
  "_40": 0,
  "_55": null,
  "_65": 0,
  "_72": null,
}
`;

exports[`renders the loading screen 2`] = `undefined`;

exports[`renders the loading screen 3`] = `undefined`;

exports[`renders the loading screen 4`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <RootNavigation />
</View>
`;

exports[`renders the root without loading screen 1`] = `<ExponentAppLoading />`;

exports[`renders the status bar if the platform is ios 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <RootNavigation />
</View>
`;

exports[`renders the view if the platform if android 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.2)",
        "height": 24,
      }
    }
  />
  <RootNavigation />
</View>
`;
